--- a/compose-files/management/compose.yaml
+++ b/compose-files/management/compose.yaml
@@ -8,7 +8,7 @@ services:
       - 9443:9443
     restart: unless-stopped
     volumes:
-      - "~/server/config/portainer:/data"
+      - "${BASE_PATH}/config/portainer:/data"
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - shared-network
