--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       HOMEPAGE_VAR_PORTAINER_API_KEY: $PORTAINER_API_KEY
       HOMEPAGE_VAR_NPM_USERNAME: $NPM_USERNAME
       HOMEPAGE_VAR_NPM_PASSWORD: $NPM_PASSWORD
+      HOMEPAGE_VAR_AUDIOBOOKSHELF_API_KEY: $AUDIOBOOKSHELF_API_KEY
     ports:
       - 80:3000
     volumes:
