--- a/compose-files/management/compose.yaml
+++ b/compose-files/management/compose.yaml
@@ -11,7 +11,7 @@ services:
       - "${BASE_PATH}/config/portainer:/data"
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
-      - shared-network
+      - homelab
 
   watchtower:
     container_name: watchtower
@@ -20,5 +20,4 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
     networks:
-      - shared-network
-      - vpn-network
+      - homelab
