--- a/compose-files/openvpn-transmission/compose.yaml
+++ b/compose-files/openvpn-transmission/compose.yaml
@@ -33,7 +33,5 @@ services:
       - 8787:8787 # Readarr Audiobooks
     restart: unless-stopped
     networks:
-      vpn-network:
-        ipv4_address: 172.19.0.7
-      shared-network:
+      - homelab
 
