--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -21,7 +21,7 @@
         container: jellyfin
         widget:
           type: jellyfin
-          url: http://192.168.0.32:8096
+          url: http://jellyfin:8096
           key: {{HOMEPAGE_VAR_JELLYFIN_API_KEY}}
           enableBlocks: true # optional, defaults to false
           enableNowPlaying: true # optional, defaults to true
